# decyphr

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  docker-compose.yaml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/ai/ai-connector/: .dockerignore  package-lock.json  package.json
apps/challenges/: Dockerfile  package.json  tsconfig.json
apps/challenges/src/: app.module.ts  main.ts
apps/chat/bots/: package-lock.json  package.json
apps/chat/chat/: package-lock.json  package.json
apps/client/: README.md  package-lock.json  package.json
apps/client/public/: backup.html  index.html  layout.html  layout.js
apps/client/src/: app.controller.ts  app.module.ts  main.ts
apps/courses/: Dockerfile  entrypoint.sh  package.json
apps/courses/src/: app.module.ts  data-source.ts  main.ts
apps/flashcards/: .env  Dockerfile  entrypoint.sh  package.json  tsconfig.json
apps/flashcards/src/: app.module.ts  data-source.ts  main.ts
apps/focus/: Dockerfile  package.json
apps/focus/src/: app.module.ts  main.ts
apps/lexicon/: Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json  tsconfig.json
apps/lexicon/scripts/: typeorm.ts
apps/lexicon/src/: app.module.ts  data-source.ts  main.ts
apps/phrasebook/: Dockerfile  package.json
apps/phrasebook/src/: app.module.ts  data-source.ts  main.ts
apps/practice/: .dockerignore  Dockerfile  entrypoint.sh  package.json
apps/practice/src/: app.module.ts  data-source.ts  main.ts
apps/ui/: middleware.ts  package-lock.json  package.json  test-kafka.js
apps/web/: .gitignore  Dockerfile  package.json  tailwind.config.cjs  tsconfig.json
authenticator/: Cargo.toml  Dockerfile
authenticator/migrations/: 20231229180737_remove_github_link.down.sql  20231229180737_remove_github_link.up.sql
authenticator/settings/: base.yaml  development.yaml  production.yaml
authenticator/src/: lib.rs  main.rs  openapi.rs  settings.rs  startup.rs
authenticator/src/accounts/: controllers.rs  db.rs  entities.rs  forms.rs  managers.rs  mod.rs  queries.rs  repositories.rs
authenticator/src/email/: managers.rs
authenticator/src/oauth/: controllers.rs  entities.rs  managers.rs  mod.rs
authenticator/src/password/: cache.rs  controllers.rs  entities.rs  managers.rs  mod.rs  repositories.rs
authenticator/src/ping/: controllers.rs  entities.rs  managers.rs  mod.rs  queries.rs  repositories.rs
authenticator/src/registration/: cache.rs  controllers.rs  db.rs  entities.rs  managers.rs  mod.rs  queries.rs  repositories.rs
authenticator/src/registration/strategies/: basic.rs
authenticator/src/registration/utils/: email.rs  mod.rs  password.rs
authenticator/src/s3/: client.rs  entities.rs
authenticator/src/sessions/: controllers.rs  db.rs  entities.rs  managers.rs  mod.rs  queries.rs  repositories.rs
authenticator/src/tokens/: entities.rs  managers.rs  mod.rs
authenticator/templates/: password_reset_email.html  verification_email.html
content/cafe/: overview.md
docker/env/: client.env  kafka-ui.env  kafka.env  mariadb.env  web.env
fluentd/: Dockerfile  entrypoint.sh
fluentd/conf/: fluent.conf
infra/: Cargo.toml
infra/src/: lib.rs
infra/src/http/response/: entities.rs
infra/src/settings/: configure.rs  entities.rs  mod.rs
infra/src/tracing/: telemetry.rs
languages/: Cargo.toml  Dockerfile
languages/migrations/: 20231114075920_init.up.sql
languages/src/: lib.rs  main.rs  openapi.rs  startup.rs
libs/contracts/: buf.gen.yaml
libs/messaging/: package.json
nlp/: .dockerignore  .gitignore  Dockerfile  requirements.txt
nlp/app/: database.py  main.py  models.py  nlp.py  schemas.py
scripts/: sync-courses.mjs
text_processing_gateway/: Cargo.toml  Dockerfile
text_processing_gateway/src/: lib.rs  main.rs  startup.rs
text_processing_gateway/src/ping/: controllers.rs
text_processing_gateway/src/processor/: controllers.rs  entities.rs  managers.rs
translator/: Dockerfile  main.py
(+443 files in other folders)
