[package]
name = "authenticator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-session = { version = "0.7", features = [
    "redis-rs-session",
    "redis-rs-tls-session",
] }
actix-web = "4.3.0"
argon2 = "0.5.0"
chrono = { version = "0.4.23", features = ["serde"] }
config = { version = "0.13.3", features = ["yaml"] }
deadpool-redis = "0.12.0"
dotenv = "0.15.0"
hex = "0.4.3"
infra = { path = "../infra" }
jsonwebtoken = "8.2.0"
lettre = { version = "0.10.4", features = ["builder", "tokio1-native-tls"] }
minijinja = { version = "0.32", features = ["source"] }
once_cell = "1.18.0"
openssl = { version = "0.10", features = ["vendored"] }
pasetors = "0.6.7"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
utoipa = { version = "4.0.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
fake = "2.8.0"
reqwest = { version = "0.11.22", features = ["json", "cookies", "multipart"] }