[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", features = ["yaml"] }
serde = "1.0.160"
sqlx = { version = "0.7.2", features = ["postgres"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
utoipa = { version = "4.0.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }