[package]
name = "text_processing_gateway"
version = "0.1.0"
edition = "2021"
authors = ["aaronsnig@gmail.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "text_processing_gateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
infra = { path = "../infra" }
serde = "1.0.160"
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"]}
tracing = "0.1.37"
utoipa = { version = "4.0.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
